1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZBin.m ([EZBin +createBegin:]): Initialize precision to 3.
	([EZBin -createEnd]): Use setXaxisMin:max:step:precision: instead of
	conditional on binNum and step adjustment.

	* EZBin.[mh] ([EZBin -setPrecision:]): New method.

	* analysis.h: Likewise.

	* EZBin.h (EZBin): New ivar precision.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment. Swarm 1.3 released.

	From Sven Thommesen <sthomme@humsci.auburn.edu>:
	
	* analysis.h (EZGraph): Return value is now a sequence for
	create{,Average,Count,Min,Max,Total}Sequence:withFeedFrom: methods.
	Declare new method -dropSequence:.

	* EZGraph.m ([EZGraph -dropSequence:]): New method.

	* EZGraph.m ([EZGraph -create
	{,Average,Count,Min,Max,Total}Sequence:withFeedFrom:andSelector:]):
	Return sequence instead of self.
	
1998-08-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	From Sven Thommesen <sthomme@humsci.auburn.edu>:

	* EZBin.[hm] (EZBin): New methods -outputGraph and -outputToFile.

	* EZGraph.[hm] (EZGraph): Likewise.

	* EZGraph.[hm] (EZSequence): Likewise.

	* EZGraph.[hm] (EZSequence): New method -update.
	
	* EZGraph.[hm] (EZAverageSequence): Likewise.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZDistribution.m ([EZDistribution -drop]): Use XFREE instead of
	xfree.

	* EZBin.m ([EZBin -drop]): Likewise.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZGraph.[hm], analysis.h: Add setRanges[XY]Min:Max: and
	setScaleModeX:Y:.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZBin.m ([EZBin -drop]): Use xfree instead of free.

1998-07-10  Alex Lancaster  <alex@santafe.edu>

	* analysis.h (FunctionGraph): Add phase tags CREATING and USING.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZGraph.m: Include analysis.h.  Don't include simtoolsgui.h.

	* analysis.h (ActiveGraph, ActiveOutFile, FunctionGraph):  Add 
	protocols and class objects.
