@@ -1,3 +1,7 @@
+1998-09-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* EZBin.[mh] ([EZBin -getHistogram]), analysis.h: New method.
+
 1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* EZBin.m ([EZBin +createBegin:]): Initialize precision to 3.
